# bevy-sandbox

./: .gitignore  Cargo.toml  README.md
libs/bevy_basic_camera/: Cargo.toml
libs/bevy_shader_utils/: Cargo.toml
sandbox/custom-shader/: Cargo.toml
sandbox/custom-shader/assets/: my_material.wgsl
sandbox/custom-shader/src/: common.rs  main.rs  material.rs  orbit_cam.rs
sandbox/custom-shader/src/mesh_data/: cube_sphere.rs  cube_square.rs  inspect.rs  mesh_noise.rs  mod.rs
sandbox/custom-shader/src/primitives/: cube_square.rs  mod.rs  segmented_plane.rs
sandbox/custom-shader/src/utils/: mod.rs  orbit_cam.rs
